--- a/src/MermaidDotNet.Tests/MermaidDotNet.Tests.csproj
+++ b/src/MermaidDotNet.Tests/MermaidDotNet.Tests.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MermaidDotNet\MermaidDotNet.csproj" />
+  </ItemGroup>
+
 </Project>
