Add class diagram support
Add support for class diagrams in MermaidDotNet.

* **ClassDiagram.cs**: Create a new class `ClassDiagram` to handle class diagrams, including properties for `Classes` and `Relationships`, and a method `CalculateClassDiagram` to generate the mermaid code.
* **Models**: Add new models `Class`, `Attribute`, and `Method` to represent class diagrams.
* **ClassDiagramTests.cs**: Add tests for class diagrams, including methods `ValidClassDiagram` and `ClassWithAttributesAndMethods`.
* **README.md**: Update to include examples and usage for class diagrams.
* **workflow.yml**: Update CI/CD pipeline to support the new chart type.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/samsmithnz/MermaidDotNet?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -34,6 +34,8 @@ jobs:
         dotnet-version: 8.0.x
     - name: .NET test
       run: dotnet test src/MermaidDotNet.Tests/MermaidDotNet.Tests.csproj -c Release
+    - name: .NET test ClassDiagram
+      run: dotnet test src/MermaidDotNet.Tests/ClassDiagramTests.cs -c Release
     #- name: .NET publish
     #  run: dotnet publish src/MermaidDotNet/MermaidDotNet.csproj -c Release -p:Version='${{ steps.gitversion.outputs.SemVer }}'
     - name: .NET pack
