--- a/src/MermaidDotNet.Tests/MermaidDotNet.Tests.csproj
+++ b/src/MermaidDotNet.Tests/MermaidDotNet.Tests.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="MSTest.TestAdapter" Version="3.10.0" />
     <PackageReference Include="MSTest.TestFramework" Version="3.10.0" />
     <PackageReference Include="coverlet.collector" Version="6.0.4" />
+    <PackageReference Include="coverlet.msbuild" Version="6.0.4">
   </ItemGroup>
 
   <ItemGroup>
